--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMRecording.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/IOMRecording.fxml
@@ -322,23 +322,24 @@
                                           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                        </columnConstraints>
                                        <rowConstraints>
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="40.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="46.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                                          <RowConstraints maxHeight="44.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
                                        </rowConstraints>
                                        <children>
-                                          <Label text="BR" GridPane.rowIndex="1" />
-                                          <Label text="LAR" GridPane.rowIndex="2" />
-                                          <Label text="BCR" GridPane.rowIndex="3" />
-                                          <Label text="L" GridPane.columnIndex="1" />
-                                          <Label text="R" GridPane.columnIndex="2" />
-                                          <ComboBox fx:id="cbBrL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                          <ComboBox fx:id="cbLarL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                          <ComboBox fx:id="cbBcrL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                          <ComboBox fx:id="cbBrR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                          <ComboBox fx:id="cbLarR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                                          <ComboBox fx:id="cbBcrR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                                          <Label text="BR" GridPane.rowIndex="2" />
+                                          <Label text="LAR" GridPane.rowIndex="3" />
+                                          <Label text="BCR" GridPane.rowIndex="4" />
+                                          <Label text="L" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <Label text="R" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                          <ComboBox fx:id="cbBrL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                          <ComboBox fx:id="cbLarL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                          <ComboBox fx:id="cbBcrL" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                          <ComboBox fx:id="cbBrR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                                          <ComboBox fx:id="cbLarR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                                          <ComboBox fx:id="cbBcrR" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
                                        </children>
                                     </GridPane>
                                  </content>
