--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/style1.css
@@ -1,14 +1,53 @@
 .text-field {
-    -fx-background-color: #a9a9a9 , white , white;
+   	-fx-background-color: #f2f2f2;
     -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
 }
 
 .text-field:focused {
-    -fx-background-color: #a9a9a9 , white , white;
-    -fx-background-insets: 0 -1 -1 -1, 0 0 0 0, 0 -1 3 -1;
+  -fx-font-family: "Quicksand";
+   /*-fx-padding: 1,1,1,1;*/
+   -fx-border-color: #4F888A;
+   -fx-border-radius: 1;
+   -fx-border: gone;
+   -fx-background-color: white;
+   -fx-box-shadow: 0px 0px 1px #777
 }
 
 
-#test{
-	-fx-background-color: #a9a9a9 , white , white;
+#menuBtn{
+	-fx-background-color: #234D74  , white , white;
+	-fx-text-fill:  #234D74;
+}
+#logOutBtn{
+	-fx-background-color: #234D74  , white , white;
+	-fx-text-fill:  #234D74;
+}
+
+.button {
+  -fx-background-color: #294F74;
+  -fx-text-fill: white;
+  -fx-font-family: "Quicksand";
+  -fx-font-size: 14px;
+  -fx-background-radius: 7px;
+}
+
+.pane {
+	-fx-background-color: #FFFFFF;
+}
+.hbox{
+	-fx-background-color: #294F74;
+	
+}
+
+.combo-box-base {
+    -fx-background-color: -fx-shadow-highlight-color, -fx-outer-border, -fx-inner-border, white;
+    -fx-background-insets: 0 0 -1 0, 0, 1, 2;
+    -fx-background-radius: 3px, 3px, 2px, 1px;
+    -fx-text-fill: -fx-text-base-color;
+
+}
+
+#searchBtn
+{
+	-fx-background-image: "135-search"
 }
