--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="borderPaneMenu" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.MenuController">
    <top>
@@ -18,8 +19,8 @@
             <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true" />
             <VBox alignment="TOP_RIGHT">
                <children>
-                  <Label text="%lbl.loggedInAs" />
-                  <Label fx:id="userName" text="Label" />
+                  <Label text="%lbl.loggedInAs" textFill="WHITE" />
+                  <Label fx:id="userName" text="Label" textFill="WHITE" />
                   <Button id="logOutBtn" fx:id="logOutBtn" mnemonicParsing="false" onAction="#logout" stylesheets="@style1.css" text="%btn.logout" />
                </children>
                <HBox.margin>
@@ -49,11 +50,28 @@
    <left>
       <VBox focusTraversable="true" spacing="8.0" stylesheets="@style1.css" BorderPane.alignment="CENTER">
          <children>
-            <Button id="menuBtn" fx:id="newProtocolBtn" mnemonicParsing="false" onAction="#openNewProtocol" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.newProtocol" />
-            <Button id="menuBtn" fx:id="protocolOverviewBtn" mnemonicParsing="false" onAction="#openProtocolOverview" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.protocolOverview" />
-            <Button id="menuBtn" fx:id="createQueryBtn" mnemonicParsing="false" onAction="#openCreatQuery" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.createQuery" />
-            <Button id="menuBtn" fx:id="expandOntologyBtn" mnemonicParsing="false" onAction="#openExpandOntology" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.expandOntology" />
-            <Button id="menuBtn" fx:id="settingsBtn" mnemonicParsing="false" onAction="#openSettings" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.settings" />
+            <Button id="menuBtn" fx:id="newProtocolBtn" mnemonicParsing="false" onAction="#openNewProtocol" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.newProtocol">
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font>
+            </Button>
+            <Button id="menuBtn" fx:id="protocolOverviewBtn" mnemonicParsing="false" onAction="#openProtocolOverview" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.protocolOverview">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Button>
+            <Button id="menuBtn" fx:id="createQueryBtn" mnemonicParsing="false" onAction="#openCreatQuery" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.createQuery">
+               <font>
+                  <Font size="17.0" />
+               </font></Button>
+            <Button id="menuBtn" fx:id="expandOntologyBtn" mnemonicParsing="false" onAction="#openExpandOntology" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.expandOntology">
+               <font>
+                  <Font size="17.0" />
+               </font></Button>
+            <Button id="menuBtn" fx:id="settingsBtn" mnemonicParsing="false" onAction="#openSettings" prefHeight="80.0" prefWidth="150.0" stylesheets="@style1.css" text="%btn.settings">
+               <font>
+                  <Font size="17.0" />
+               </font></Button>
          </children>
       </VBox>
    </left>
