--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/Menu.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPaneMenu" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.MenuController">
+<BorderPane fx:id="borderPaneMenu" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bachelorthesis.IOMDOProject.controller.MenuController">
    <top>
       <HBox alignment="TOP_RIGHT" minHeight="80.0" styleClass="hbox" stylesheets="@style1.css" BorderPane.alignment="CENTER">
          <children>
