--- a/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/TestStyle.css
+++ b/IOMDOProject/src/main/resources/bachelorthesis/IOMDOProject/TestStyle.css
@@ -25,5 +25,5 @@
    -fx-border-radius: 1;
    -fx-border: gone;
    -fx-background-color: transparent;
-   -fx-text-fill: grey;
+   -fx-text-fill: #767171;
 }
